rust/macros/tests/invalid/target/rls/debug/deps/two_arrows_rs-c804563c1c27a7b8.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\two_arrows_rs-c804563c1c27a7b8.rmeta: two-arrows.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\two_arrows_rs-c804563c1c27a7b8.d: two-arrows.rs

two-arrows.rs:
